# PadariaBackend

./: .env  .env.sample  .gitignore  .pdm-python  .pdm.toml  db.sqlite3  package-lock.json  padaria.json  padaria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
padaria/: admin.py
padaria/migrations/: 0001_initial.py  0002_carrinho.py  0003_alter_carrinho_options.py  0004_alter_carrinho_bairro_alter_carrinho_cep_and_more.py  0005_produto_imagem.py  0006_alter_produto_imagem.py  0007_produto_uploaded_on.py  0008_rename_imagem_produto_file.py  0009_produto_attachment_key_produto_public_id.py  0010_remove_produto_attachment_key_and_more.py  0011_remove_produto_uploaded_on_alter_produto_file.py  0012_remove_produto_file_produto_imagem.py  0013_usuario_imagem.py  0014_categoria_produto_categoria.py  0015_categoria_imagem.py  0016_remove_endereco_bairro_remove_endereco_cidade_and_more.py  0017_alter_endereco_cep_alter_endereco_numero.py  0018_alter_categoria_descricao_alter_produto_categoria.py  0019_alter_produto_imagem.py  0020_alter_categoria_imagem_alter_usuario_imagem.py  0021_alter_categoria_imagem_alter_produto_imagem_and_more.py  0022_alter_carrinho_usuario_delete_usuario.py  0023_remove_carrinho_usuario.py  0024_remove_carrinho_bairro_remove_carrinho_cep_and_more.py  0025_remove_carrinho_produto_carrinho_produto.py  0026_remove_produto_descricao_produto_unidade.py  0027_produto_quantidade.py  0028_alter_produto_quantidade.py  0029_remove_produto_quantidade.py  (+9 more)
usuario/: admin.py  models.py  serializers.py  views.py
utils/: files.py
(+38 files in other folders)
