[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Heric Matheus Damasio", email = "hericmdms@gmail.com"},
]
dependencies = [
    "django>=4.2.2",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "drf-spectacular>=0.26.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
